--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -4,8 +4,8 @@
       <div class="setup-container__header">
 
         <div class="quote">
-          <div>Fortune sides with him who dares</div>
-          <div>-Virgil</div>
+          <div>{{quote.quote}}</div>
+          <div>-{{quote.attribution.author}}</div>
         </div>
 
         <div class="greeting">
