--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.scss
@@ -63,15 +63,17 @@
     }
 
     .first-column {
-      font-size: 13px;
-      color: rgba(0, 0, 0, 0.87);
-      font-weight: normal;
+      div {
+        font-size: 13px;
+        color: rgba(0, 0, 0, 0.87);
+        font-weight: normal;
+      }
     }
 
     .first-row {
-      font-weight: 500;
-      font-size: 12px;
-      color: rgba(0, 0, 0, 0.54);
+      font-weight: 500 !important;
+      font-size: 12px !important;
+      color: rgba(0, 0, 0, 0.54) !important;
     }
 
     .item {
