--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -3,29 +3,28 @@
 
       <div class="lowdata-container__header">
         <div class="greeting">
-          <div>Welcome back, {{name}}!</div>
-          <div class="total-revenue-text">Lifetime Total Revenue</div>
-          <div class="total-revenue-amount">$453.23</div>
+          <div>{{'DASHBOARD_STATE_LOWDATA_GREETING' | translate}} {{name}}</div>
+          <div class="total-revenue-text">{{'DASHBOARD_STATE_LOWDATA_TOTALREVENUE' | translate}}</div>
+          <div class="total-revenue-amount">${{revenue}}</div>
         </div>
 
         <div class="quote">
-          <div>Fortune sides with him who dares</div>
-          <div>-Virgil</div>
+          <div>{{quote.quote}}</div>
+          <div>-{{quote.attribution.author}}</div>
         </div>
       </div>
 
       <div class="chart-container">
-        <funnel-graph [simpleChart]="true"></funnel-graph>
+        <funnel-graph #graph [simpleChart]="true" [period]="'HOUR'"></funnel-graph>
         <div class="transactions">
-          <div>Latest Transactions</div>
-
+          <div class="transactions__title">{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_TITLE' | translate}}</div>
           <table>
             <thead>
             <tr>
-              <th>Status</th>
-              <th>Amount</th>
-              <th>Date</th>
-              <th>Merchant Provider</th>
+              <th>{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_STATUS' | translate}}</th>
+              <th>{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_AMOUNT' | translate}}</th>
+              <th>{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_DATE' | translate}}</th>
+              <th>{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_MERCHANTPROVIDER' | translate}}</th>
             </tr>
             </thead>
             <tbody>
@@ -34,22 +33,20 @@
                 <div class="icon-holder">
                   <mat-icon role="img" aria-hidden="true">done</mat-icon>
                 </div>
-                <div class="success">{{transaction.status}}</div>
+                <div class="success">{{transaction.processorResponse.message}}</div>
               </td>
-              <td>{{transaction.amount}}</td>
-              <td>{{transaction.date}}</td>
-              <td>{{transaction.merchantprovider}}</td>
+              <td>{{transaction.amount.usd()}}</td>
+              <td>{{transaction.createdAt | formatDateTime}}</td>
+              <td>{{transaction.merchantProvider.name}}</td>
             </tr>
             </tbody>
           </table>
 
-
-          <div class="more">MORE</div>
+          <div class="more" [routerLink]="['/transactions']">{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_MORE' | translate}}</div>
         </div>
       </div>
 
       <dashboard-issues-report [reports]="issueReports" [background]=true></dashboard-issues-report>
-
       <div>
     </div>
   </div>
