Hide dashboards instead of excluding them in DOM to prevent issues with loading charts.

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -7,7 +7,7 @@
   <mat-tab label="SETUP">
     <c-dashboard-setup></c-dashboard-setup>
   </mat-tab>
-  <mat-tab *ngIf="availableDashboards.includes(DashboardType.full)" label="DASHBOARD">
+  <mat-tab [hidden]="!availableDashboards.includes(DashboardType.full)" label="DASHBOARD">
     <c-dashboard-full></c-dashboard-full>
   </mat-tab>
 </mat-tab-group>
