Event funnel style change, sort latest transactions, fix quote and few design changes.

--- a/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.scss
@@ -33,7 +33,7 @@
 .dashboard-message {
   margin-left: auto;
   max-width: 600px;
-  color: #97B7DD;
+  color: #B5D0FA;
   font-style: italic;
   font-size: 24px;
   font-weight: 300;
