--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background: linear-gradient(180deg, #4277C2 8.44%, #2C98F0 100%);
-  min-height: 100vh;
+  height: calc(100vh - 70px - 63px); //substract height of top nav and height of dashboard state tabs
   justify-content: center;
 
   &__header {
@@ -36,6 +36,7 @@
       font-weight: lighter;
       font-style: italic;
       color: white;
+      opacity: 0.7;
 
       div:last-child {
         font-size: 16px;
@@ -51,7 +52,6 @@
 
     funnel-graph {
       display: block;
-      width: 33%;
     }
 
     .transactions {
@@ -66,16 +66,18 @@
       }
 
       .more {
-        font-weight: 500;
-        font-size: 14px;
-        letter-spacing: 0.1em;
         text-align: center;
         cursor: pointer;
-        margin-top: 20px;
+
+        button {
+          font-weight: 500;
+          font-size: 14px;
+          letter-spacing: 0.1em;
+        }
       }
 
       table {
-        margin-top: 20px;
+        margin-top: 6px;
 
         th {
           font-weight: 500;
