--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -3,7 +3,7 @@
 
       <div class="setup-container__header">
 
-        <div class="quote">
+        <div *ngIf="quote" class="quote">
           <div>{{quote.quote}}</div>
           <div>-{{quote.attribution.author}}</div>
         </div>
