--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   color: white;
   background: linear-gradient(180deg, #4277C2 8.44%, #2C98F0 100%);
-  min-height: 100vh;
+  height: calc(100vh - 70px - 63px); //substract height of top nav and height of dashboard state tabs
   font-family: Roboto;
 
   &__header {
@@ -18,6 +18,7 @@
       font-size: 24px;
       font-weight: lighter;
       font-style: italic;
+      color: #B5D0FA;
 
       div:last-child {
         font-size: 16px;
