Add possibility to download terms and conditions.

--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -66,6 +66,10 @@
     <mat-tab *ngIf="showBilling()">
       <bills-overview [focused]="isBillingFocused"></bills-overview>
     </mat-tab>
+
+    <mat-tab class="agreements">
+      <agreements></agreements>
+    </mat-tab>
   </mat-tab-group>
 </div>
 
