--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
@@ -30,7 +30,7 @@
 
   <div *ngIf="funnel" class="table-container">
 
-    <div class="column" [class.first-column]="simpleChart">
+    <div class="column first-column">
       <div class="item item--title"></div>
       <div class="item item--title">{{'DASHBOARD_EVENTSFUNNEL_CLICK' | translate}}</div>
       <div class="item item--title">{{'DASHBOARD_EVENTSFUNNEL_LEAD' | translate}}</div>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="column">
-      <div class="item item--title" [class.first-row]="simpleChart">Number</div>
+      <div class="item item--title first-row">Number</div>
       <div class="item">{{funnel.click.count | numberlocale}}</div>
       <div class="item">{{funnel.lead.count | numberlocale}}</div>
       <div class="item">{{funnel.main.count | numberlocale}}</div>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="column">
-      <div class="item item--title" [class.first-row]="simpleChart">% of Clicks</div>
+      <div class="item item--title first-row">% of Clicks</div>
       <div class="item"></div>
       <div class="item">{{(funnel.lead.percentage | numberlocale) || '-'}}%</div>
       <div class="item">{{(funnel.main.percentage | numberlocale) || '-'}}%</div>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="column" *ngIf="!simpleChart">
-      <div class="item item--title">% of Sales</div>
+      <div class="item item--title first-row">% of Sales</div>
       <div class="item"></div>
       <div class="item"></div>
       <div class="item"></div>
