--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
@@ -1,5 +1,5 @@
 .dashboard {
-  background: linear-gradient(#5185C4, #39C2F4);
+  background: #4277C2;
 }
 
 .dashboard-container {
@@ -8,21 +8,23 @@
 
 .info {
   margin: 50px 25px 0;
-  color: white;
+  color: #B5D0FA;
   font-weight: 300;
 
   div {
     &:first-of-type {
-      font-size: 28px;
+      font-size: 30px;
     }
 
     &:nth-of-type(2) {
-      margin: 5px 0;
-      font-size: 42px;
+      font-size: 16px;
+      font-weight: 400;
     }
 
     &:last-of-type {
-      font-size: 14px;
+      margin: 5px 0;
+      font-size: 72px;
+      color: #B7FAF0;
     }
   }
 }
