--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   background: linear-gradient(180deg, #4277C2 8.44%, #2C98F0 100%);
-  height: calc(100vh - 70px - 63px); //substract height of top nav and height of dashboard state tabs
   justify-content: center;
 
   &__header {
@@ -87,6 +86,7 @@
 
         tr {
           border-bottom: 1px solid  rgba(0, 0, 0, 0.15);
+          cursor: pointer;
         }
 
         td {
