--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -138,8 +138,9 @@ $color-orange: #F16C00;
       margin-bottom: 15px;
 
       .main {
-        color: #5383C3;
-        font-size: 24px;
+        color: rgba(0, 0, 0, 0.87);
+        font-size: 18px;
+        font-weight: 500;
       }
 
       mat-icon {
