Show terms and conditions for account owner.

--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -67,7 +67,7 @@
       <bills-overview [focused]="isBillingFocused"></bills-overview>
     </mat-tab>
 
-    <mat-tab class="agreements">
+    <mat-tab class="agreements" *ngIf="showAgreements()">
       <agreements></agreements>
     </mat-tab>
   </mat-tab-group>
