Render all pages of PDF.

--- a/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
+++ b/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
@@ -3,7 +3,7 @@
   border-radius: 4px;
   box-shadow: 0 19px 38px rgba(0,0,0,0.3), 0 15px 12px rgba(0,0,0,0.22);
   flex-direction: column;
-  width: 750px;
+  width: 640px;
   background: white;
   font-family: "Roboto", serif;
   margin: auto;
@@ -11,9 +11,13 @@
   button {
     text-transform: uppercase;
     font-size: 14px;
+
+    .disabled {
+      background: gray;
+    }
   }
 
-  .accept {
+  .download {
     color: white;
     background: #2C98F0;
   }
