--- a/src/app/pages/accounts-page/account-view/agreements/agreements.component.html
+++ b/src/app/pages/accounts-page/account-view/agreements/agreements.component.html
@@ -2,7 +2,7 @@
 
   <div class="title" id="title">
     <div>{{termsAndConditions.title}}</div>
-    <button class="accept" mat-button (click)="download()">{{'TERMS_DOWNLOAD' | translate}}</button>
+    <button class="download" mat-button (click)="download()" [class.disabled]="downloadDisabled">{{'TERMS_DOWNLOAD' | translate}}</button>
   </div>
   <div *ngIf="termsAndConditions && termsAndConditions.body" class="body" Markdown id="terms">{{termsAndConditions.body}}</div>
 
