--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -7,6 +7,9 @@
   <mat-tab label="SETUP">
     <c-dashboard-setup></c-dashboard-setup>
   </mat-tab>
+  <mat-tab [hidden]="!availableDashboards.includes(DashboardType.low_data)" label="TRANSACTIONS">
+    <c-dashboard-low-data></c-dashboard-low-data>
+  </mat-tab>
   <mat-tab [hidden]="!availableDashboards.includes(DashboardType.full)" label="DASHBOARD">
     <c-dashboard-full></c-dashboard-full>
   </mat-tab>
