--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   background: linear-gradient(180deg, #4277C2 8.44%, #2C98F0 100%);
   justify-content: center;
+  min-height: calc(100vh - 70px - 62px); //subtract height of top nav and height of dashboard state tabs
 
   &__header {
     display: flex;
