Event funnel charts unstable - work in progress.

--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
@@ -27,6 +27,6 @@
 
     <top-subscriptions></top-subscriptions>
 
-    <funnel-graph></funnel-graph>
+    <funnel-graph [active]="active"></funnel-graph>
   </div>
 </div>
