--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -15,8 +15,8 @@
       </div>
 
       <div class="chart-container">
-        <div (click)="show = true" style="width: 350px">
-          <funnel-graph-simple *ngIf="show" [active]="active" [simpleChart]="true" [period]="'HOUR'"></funnel-graph-simple>
+        <div (click)="showChart = true" style="width: 350px">
+          <funnel-graph-simple *ngIf="active" [simpleChart]="true" [period]="'HOUR'"></funnel-graph-simple>
         </div>
         <div class="transactions">
           <div class="transactions__title">{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_TITLE' | translate}}</div>
