--- a/src/app/pages/accounts-page/account-view/agreements/agreements.component.html
+++ b/src/app/pages/accounts-page/account-view/agreements/agreements.component.html
@@ -1,9 +1,13 @@
 <div class="container">
-
-  <div class="title" id="title">
-    <div>{{termsAndConditions.title}}</div>
-    <button class="download" mat-button (click)="download()" [class.disabled]="downloadDisabled">{{'TERMS_DOWNLOAD' | translate}}</button>
+  <div class="item" *ngIf="termsAndConditions">
+    <div class="title">{{'TERMS_OWNERCONDITIONS' | translate}}</div>
+    <div class="revised-date" *ngIf="termsAndConditions.version">{{'TERMS_VERSION' | translate}} {{termsAndConditions.version}}</div>
+    <button mat-button>{{'TERMS_DOWNLOAD' | translate}}</button>
   </div>
-  <div *ngIf="termsAndConditions && termsAndConditions.body" class="body" Markdown id="terms">{{termsAndConditions.body}}</div>
-
+  <div class="line" *ngIf="licenceAgreement"></div>
+  <div class="item" *ngIf="licenceAgreement">
+    <div class="title">{{'REGISTER_LICENSEAGREEMENT' | translate}}</div>
+    <div class="revised-date">{{'TERMS_VERSION' | translate}} </div>
+    <button mat-button>{{'TERMS_DOWNLOAD' | translate}}</button>
+  </div>
 </div>
