--- a/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
+++ b/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
@@ -1,49 +1,51 @@
 .container {
   display: flex;
-  border-radius: 4px;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.3), 0 15px 12px rgba(0,0,0,0.22);
   flex-direction: column;
   width: 640px;
-  background: white;
   font-family: "Roboto", serif;
-  margin: auto;
+  margin: 25px auto auto auto;
 
-  button {
-    text-transform: uppercase;
-    font-size: 14px;
-
-    .disabled {
-      background: gray;
-    }
-  }
-
-  .download {
-    color: white;
-    background: #2C98F0;
-  }
-
-  .title {
-    background: #FFFCAB;
-    padding: 45px 25px;
-    font-size: 20px;
-    font-weight: 500;
-    color: #000d11;
-    border-radius: 4px 4px 0 0;
+  .item {
     display: flex;
-    justify-content: space-between;
 
-    div {
-      margin-top: 8px;
+    .title {
+      color: #202124;
+      font-weight: 500;
+      font-size: 18px;
+    }
+
+    .revised-date {
+      color: #5f6368;
+      font-weight: 500;
+      font-size: 13px;
+      line-height: 22px;
+      margin-left: 20px;
+    }
+
+    button {
+      text-transform: uppercase;
+      color: #2c98f0;
+      font-weight: 500;
+      font-size: 14px;
+      margin-left: auto;
+      margin-right: -16px;
+      margin-top: -10px;
     }
   }
 
-  .body {
-    text-align: justify;
-    padding: 25px 45px;
-    font-size: 13px;
-    line-height: 16px;
-    color: #4A4A4A;
+  .line {
+    margin: 0 auto;
+    height: 1px;
+    width: 640px;
+    background: rgba(0, 0, 0, 0.12);
   }
 
+  div:first-child {
+    margin-bottom: 13px;
+  }
+
+  div:last-child {
+    margin-top: 25px;
+  }
 }
 
