--- a/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
+++ b/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 640px;
   font-family: "Roboto", serif;
-  margin: 25px auto auto auto;
+  margin: 25px 10px auto;
 
   .item {
     display: flex;
