Use temporary design for failed transactions.

--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -121,6 +121,39 @@
             height: 18px;
           }
         }
+
+        .icon-holder {
+          margin-right: 10px;
+          margin-top: 3px;
+          display: flex;
+          border-radius: 50%;
+          width: 20px;
+          height: 20px;
+
+          &__success {
+            background-color: #1ebea5;
+
+            .success-icon {
+              color: white;
+              margin: auto;
+              font-size: 18px;
+              width: 18px;
+              height: 18px;
+            }
+          }
+
+          &__fail {
+            background-color: white;
+
+            .fail-icon {
+              color: #DC2547;
+              margin: auto;
+              font-size: 24px;
+              width: 24px;
+              height: 24px;
+            }
+          }
+        }
       }
     }
   }
