--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -32,8 +32,11 @@
             <tbody>
             <tr [routerLink]="['/transactions', transaction.id]" *ngFor="let transaction of transactions">
               <td>
-                <div class="icon-holder">
-                  <mat-icon role="img" aria-hidden="true">done</mat-icon>
+                <div *ngIf="transaction.processorResponse.message === 'Success'" class="icon-holder icon-holder__success">
+                  <mat-icon class="success-icon" role="img" aria-hidden="true">done</mat-icon>
+                </div>
+                <div *ngIf="transaction.processorResponse.message === 'Failed'" class="icon-holder icon-holder__fail">
+                  <mat-icon class="fail-icon" role="img" aria-hidden="true">cancel</mat-icon>
                 </div>
                 <div class="success">{{transaction.processorResponse.message}}</div>
               </td>
