--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -8,10 +8,10 @@
   <mat-tab label="SETUP">
     <c-dashboard-setup></c-dashboard-setup>
   </mat-tab>
-  <mat-tab [hidden]="(!availableDashboards.includes(DashboardType.low_data) && (activeDashboard !== DashboardType.low_data))" label="TRANSACTIONS">
+  <mat-tab *ngIf="availableDashboards.includes(DashboardType.low_data) || activeDashboard === DashboardType.low_data" label="TRANSACTIONS">
     <c-dashboard-low-data></c-dashboard-low-data>
   </mat-tab>
-  <mat-tab [hidden]="(!availableDashboards.includes(DashboardType.full) && (activeDashboard !== DashboardType.full))" label="DASHBOARD">
+  <mat-tab *ngIf="availableDashboards.includes(DashboardType.full) || activeDashboard === DashboardType.full" label="DASHBOARD">
     <c-dashboard-full></c-dashboard-full>
   </mat-tab>
 </mat-tab-group>
